PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_11-127_if_else_condition_invalide_3/gcc-compile.txt
input.c:3:9: error: expected expression
    if (= 4) {
        ^
1 error generated.

return code: 1
